--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
     padding: 0 80px;
 }
 
+/* Produtos */
 .produtos{
     margin: 100px auto 0 auto;
 }
@@ -37,3 +38,6 @@ body{
 .produto_preco{
     color: rgba(0, 0, 0, 0.5);
 }
+
+/* Modal */
+
