--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,17 @@ body{
     gap: 50px;
     padding: 50px 50px 50px 0;
     background: linear-gradient(to right,transparent 250px, #fff 250px);
+    animation: fadeIn .3s forwards;
+}
 
+@keyframes fadeIn{
+    from {
+        opacity: 0;
+        transform  : translate3d(50px,0,0);
+    }to{
+        opacity: 1;
+        transform: translate3d(0px,0,0);
+    }
 }
 
 .modal_img{
@@ -84,6 +94,20 @@ body{
 .modal_info{
     grid-column: 2;
     max-width: 600px;
+}
+
+.modal_fechar{
+    border-radius: 50%;
+    border: 2px solid #000;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    font-size: 1rem;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+
 }
 .modal_btn{
     margin-top: 80px;
