--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,36 @@ body{
 #app{
     padding: 0 80px;
 }
+/* Header */
+.header{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0 ;
+    max-width: 900px;
+    margin: auto;
+
+}
+.header_logo{
+    width: 80px;
+}
+.carrinho_menu::after{
+    content: "";
+    display: inline-block;
+    background: url("/assets/carrinho.svg") no-repeat center center;
+    width: 25px;
+    height: 25px;
+    margin-left: 10px;
+}
+
+.carrinho_menu{
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
 
 /* Produtos */
 .produtos{
-    margin: 100px auto 0 auto;
+    margin: 100px auto ;
 }
 
 .produto{
@@ -120,7 +146,10 @@ body{
     font-family: 'Noto Serif';
     border-radius: 5px;
 }
-
+.esgotado{
+    cursor: no-drop;
+    background : #808080;
+}
 .modal_btn:active{
     background: #808080;
 }
