--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background: linear-gradient(to right,#1a1a1a 30%, #fff 30% );
+    background: linear-gradient(to right,#1a1a1a 35%, #fff 35% );
     font-family: 'Noto Serif';
 }
 
@@ -19,7 +19,7 @@ body{
     justify-content: space-between;
     padding: 20px 0 ;
     max-width: 900px;
-    margin: auto;
+    margin: 0  auto;
 
 }
 .header_logo{
@@ -36,6 +36,7 @@ body{
 
 .carrinho_menu{
     display: flex;
+    justify-content: end;
     align-items: center;
     cursor: pointer;
 }
@@ -43,6 +44,7 @@ body{
 /* Produtos */
 .produtos{
     margin: 100px auto ;
+    max-width: 900px;
 }
 
 .produto{
