--- a/css/style.css
+++ b/css/style.css
@@ -206,3 +206,53 @@ body{
    border: 2px solid black;
    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
+
+/* Carrinho */
+.carrinho_modal::before{
+    content: "";
+    position: fixed;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100vh;
+    top : 0;
+    left: 0;
+}
+.carrinho_modal{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    display: none;
+}
+.carrinho_modal.ativo{
+    display: block;
+}
+.carrinho_container{
+    position: relative;
+    margin: 80px auto;
+    width: 800px;
+    background: #fff;
+    padding: 40px;
+    max-width: 880px;
+    animation: fadeDown .3s forwards;
+}
+.carrinho_item{
+    display: grid;
+    grid-template-columns: 1fr 1fr 50px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+}
+.carrinho_titulo{
+    margin-bottom: 10px;
+    border-bottom: 2px solid #000;
+    padding-bottom: 20px;
+}
+
+.carrinho_remover{
+    border: none;
+    background: none;
+    font-size: 1rem;
+    cursor: pointer;
+}
